applications/todo-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "todo.lab.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todo-app-svc
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app-redirect
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - "todo.lab.local"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
